@@ -1,4 +1,4 @@
-LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.425 $>
+LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.426 $>
 
 
 [Note: This file does not mention every change made to the NetBSD source tree.
@@ -216,3 +216,7 @@ Changes from NetBSD 2.0 to NetBSD 3.0:
 	ipf(8): updated to version 4.1.5. [martti 20050208]
 	ipsec(4): Add support for IPsec NAT-T [manu 20050212]
 	ssh: Imported OpenSSH 3.9 [christos 20050213]
+	systat(1): Add "df" display to give information about filesystems,
+		available diskspace and used disk capacity, similar to df(1).
+		[hubertf 20050216]
+		
